Add basic site with CI

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,15 @@
     "work-tracker-e2e": {
       "tags": [],
       "implicitDependencies": ["work-tracker"]
+    },
+    "cloud": {
+      "tags": []
+    },
+    "daily-time": {
+      "tags": []
+    },
+    "cloud-shared": {
+      "tags": []
     }
   }
 }
