--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/setup-node@v2-beta
       - run: npm install
       - run: npm run build
+      - run: sudo apt-get update && sudo apt-get install -y rsync
       - uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
