--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,14 +1,9 @@
-# This is a basic workflow to help you get started with Actions
+name: Pages
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [master]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   publish-gh:
     name: Publish Github Pages
@@ -19,9 +14,8 @@ jobs:
       - uses: actions/setup-node@v2-beta
       - run: npm install
       - run: npm run build
-      - run: sudo apt-get update && sudo apt-get install -y rsync
       - uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: dist/apps/user-login # The folder the action should deploy.
+          BRANCH: gh-pages
+          FOLDER: dist/apps/work-tracker
