Add basic rest api

--- a/libs/daily-time/src/package.json
+++ b/libs/daily-time/src/package.json
@@ -2,5 +2,7 @@
   "name": "daily-time",
   "version": "1.0.0",
   "main": "src/app.js",
-  "dependencies": {}
+  "dependencies": {
+    "@myin/aws-utils": "^0.0.5"
+  }
 }
