Add basic time input

--- a/nx.json
+++ b/nx.json
@@ -17,12 +17,7 @@
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint",
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   },
@@ -32,9 +27,7 @@
     },
     "work-tracker-e2e": {
       "tags": [],
-      "implicitDependencies": [
-        "work-tracker"
-      ]
+      "implicitDependencies": ["work-tracker"]
     },
     "cloud": {
       "tags": []
@@ -46,6 +39,9 @@
       "tags": []
     },
     "work-time-client": {
+      "tags": []
+    },
+    "day-tracker": {
       "tags": []
     }
   }
