--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@myin/auth-client": "0.0.4",
     "@myin/utils": "0.0.4",
     "axios": "^0.20.0",
