--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@myin/utils": "0.0.4",
     "axios": "^0.20.0",
     "document-register-element": "1.13.1",
+    "luxon": "^1.25.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0"
@@ -60,6 +61,7 @@
     "@testing-library/react": "10.4.1",
     "@types/aws-lambda": "^8.10.63",
     "@types/jest": "^26.0.8",
+    "@types/luxon": "^1.25.0",
     "@types/node": "~8.9.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
