--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,8 @@
       "@myin-work/cloud-shared": ["libs/cloud-shared/src/index.ts"],
       "@myin-work/work-time-client": ["libs/work-time-client/src/index.ts"],
       "@myin-work/day-tracker": ["libs/day-tracker/src/index.ts"],
-      "@myin-work/time-utils": ["libs/time-utils/src/index.ts"]
+      "@myin-work/time-utils": ["libs/time-utils/src/index.ts"],
+      "@myin-work/exporter": ["libs/exporter/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
