--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,3 +19,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
           FOLDER: dist/apps/work-tracker
+  notify-discord:
+    name: Discord notification
+    runs-on: ubuntu-latest
+    needs: publish-gh
+    steps:
+      - uses: Ilshidur/action-discord@master
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
