Support week view

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build --prod",
+    "package": "nx run-many --target=package --all",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
