--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@myin/utils": "0.0.4",
     "axios": "^0.20.0",
     "document-register-element": "1.13.1",
+    "excellentexport": "^3.5.0",
     "luxon": "^1.25.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
