--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/node": "~8.9.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
     "aws-lambda": "^1.0.6",
