--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,8 @@
       "@myin-work/day-tracker": ["libs/day-tracker/src/index.ts"],
       "@myin-work/time-utils": ["libs/time-utils/src/index.ts"],
       "@myin-work/exporter": ["libs/exporter/src/index.ts"],
-      "@myin-work/openapi": ["libs/openapi/src/index.ts"]
+      "@myin-work/openapi": ["libs/openapi/src/index.ts"],
+      "@myin-work/login": ["libs/login/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
