--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "^5.2.0",
+    "whatwg-fetch": "^3.6.2",
     "xlsx": "^0.16.8"
   },
   "devDependencies": {
